nav on mobile fix attempt

--- a/Styles/about.css
+++ b/Styles/about.css
@@ -68,7 +68,7 @@ p   {
     font-size: 1.1em;
     letter-spacing: 0.02em;
     mix-blend-mode: multiply;
-    color: rgb(0, 0, 0);
+    color: #000000;
     border: 0px solid rgba(255, 255, 255, 0);
     transition-duration: 0.9s;
 }.nav_link:hover    {
